# shop-api-challange

./: Dockerfile-shop-api  README.md  docker-compose.yml  pyproject.toml
application/: __init__.py  views.py
application/cart/: __init__.py  dtos.py  requests.py  responses.py  services.py  views.py
application/common/: dtos.py  requests.py  responses.py
application/order/: __init__.py  dtos.py  requests.py  responses.py  services.py  views.py
application/product/: __init__.py  dtos.py  requests.py  responses.py  services.py  views.py
domain/cart/: entities.py  exceptions.py  repository.py  value_objects.py
domain/common/: exceptions.py  value_objects.py
domain/order/: entities.py  exceptions.py  repository.py  value_objects.py
domain/product/: __init__.py  entities.py  exceptions.py  repository.py  value_objects.py
infrastructure/: models.py  run.py  utils.py
infrastructure/flask_app/: __init__.py  configs.py
infrastructure/migrations/versions/: 1f44644586f2_.py  39dd40370144_.py  59aebbcd69c6_.py  b184d32dc7d5_.py  d6985b282f37_.py  dfddcc87f1a1_.py  e2a0370ba235_.py  fbfbafc02b63_.py
infrastructure/repositories/: __init__.py  cart.py  order.py  product.py
tests/cart/application/: test_cart_request_converter.py  test_cart_response_converter.py  test_cart_services.py
tests/cart/domain/: test_cart.py  test_price.py
tests/common/: mock_cart.py  mock_order.py  mock_product.py  mock_repositories.py
tests/order/application/: test_order_request_converter.py  test_order_response_converter.py  test_order_service.py
(+5 files in other folders)
